# suugaku

./: Cargo.toml  LICENSE  Makefile.toml  README.md  clippy.toml  rust-toolchain.toml  rustfmt.toml
.github/workflows/: checks.yml  rust-checks.yml  rust-tests.yml  tests.yml
src/: main.rs
src/operations/: mod.rs
src/operations/find/: mod.rs  sum_pairs.rs
src/operations/find/sum/: mod.rs  pairs.rs
src/operations/find/sum/pairs/: mod.rs  model.rs  parse.rs  run.rs  solver.rs
tests/: main.rs
