[package]
name = "suugaku"
version = "0.1.0"
edition = "2021"
description = "A command line interface to do math operations."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.3", features = ["derive"] }
num = "0.4.0"
num-integer = "0.1.45"
unordered-pair = "0.2.4"

[dev-dependencies]
proptest = "1.0.0"
